# K.I.no

./: .RData  .Rhistory  .gitignore  Attendance_Stats.R  Data_Analysis.ipynb  Dockerfile  Movie Attendance Prediction.odt  Movie_Attendance_Brainstorming.ipynb  README.md  README.txt  SETUP_GUIDE.md  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
Data/: Get_Metadata_To_CSV.ipynb  Get_Wanted_Data.ipynb
Data/Raw_Data/: CineAsta_Movie_Data_Raw.csv  CineAsta_Movie_Data_Raw.ods  Create_Metadata_csv.ipynb
Data/Semester_Dates/: Extract_Dates.ipynb  Semester_Dates.csv
Data/Uni_Data_Semesters/: sommer_06.csv  sommer_07.csv  sommer_11.csv  sommer_12.csv  sommer_13.csv  sommer_15.csv  sommer_16.csv  sommer_17.csv  sommer_23.csv  winter_0506.csv  winter_0809.csv  winter_0910.csv  winter_1213.csv  winter_1314.csv  winter_1516.csv  winter_1718.csv  winter_1819.csv  winter_1920.csv  winter_2122.csv
Plots/: Attendance_Stats.R
Testing/: Creating_Dataset_Test.ipynb  Test_data.csv  Test_data.ods
Testing/Metadata_Scraping/: LB_Rating_Extraction.py
app/: Extract_Metadata.ipynb  Get_Metadata_To_CSV.ipynb  Get_Wanted_Data.ipynb  test.py
app/analysis/: __init__.py  format.py  plot.py  stats.py
app/collector/: __init__.py  cleaner.py  dataHandler.py  exporter.py  formatDate.py
app/metadata/: __init__.py  add_time.py  arrange.py
app/preprocessor/: __init__.py  cleaner.py  dataHandler.py  exporter.py  formatDate.py
app/search/: movie.py  search_movie.py
app/training/: __init__.py  encode.py  eval.py  (+5 more)
notebooks/: Data_Analysis.ipynb
(+91 files in other folders)
